--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "require": {
     "webmozart/console": "~1.0@beta",
-    "stefangabos/zebra_curl": "^1.3"
+    "stefangabos/zebra_curl": "^1.3",
+    "php-di/php-di": "^5.4"
   },
   "require-dev": {
     "phpunit/phpunit": "5.5.*"
@@ -19,7 +20,10 @@
   "autoload": {
     "psr-4": {
       "Lezhnev74\\HLSMonitor\\": "src/"
-    }
+    },
+    "files": [
+      "src/bootstrap.php"
+    ]
   },
   "bin": [
     "bin/hls-monitor"
