--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require": {
     "webmozart/console": "~1.0@beta",
     "stefangabos/zebra_curl": "^1.3",
-    "php-di/php-di": "^5.4"
+    "php-di/php-di": "^5.4",
+    "guzzlehttp/guzzle": "^6.2"
   },
   "require-dev": {
     "phpunit/phpunit": "5.5.*"
